src/objects/MX_PyME_Reporte__c.object
<CustomObject>
    <fields>
        <fullName>MX_PyME_ventas_constantes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>¿Sus ventas permanecen constantes?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_PyMe_Otro_propietario_instalacion__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Otro (explica) propietario instalación</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mx_PyME_Corto_plazo__c</fullName>
        <label>Corto plazo</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Exportación</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Crecimiento de instalaciones</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Nuevos productos y servicios</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Nueva planta</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Diversificación de mercado</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>Atracción de nuevos socios</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>Compra, sustitución de maquinaria</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>Mejora tecnológica</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>Eficiencias de costos / gastos</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>Renegociación, sustitución de proveedores</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>Cierre línea de negocios</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>Expansión de puntos de venta</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>Desinversión</label>
                </value>
                <value>
                    <fullName>14</fullName>
                    <label>Incremento capital</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <label>Otro</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mx_PyME_Es_cliente_Bancomer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Es cliente Bancomer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_empleados__c</fullName>
        <label>No. empleados ventas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Reporte PyME</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre de Reporte PyME</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reportes PyME</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>